[package]
edition = "2021"
name    = "dedupe"
version = "0.1.0"

[dependencies]
blake3             = "1.5.5"
clap               = { version = "4.5.23", features = ["derive"] }
futures            = "0.3"
num_cpus           = "1.16"
sled               = "0.34.7"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir            = "2.4"
